Change DBus path for last update to /GpsTime
Updated DBus path for last update to use raw Unix timestamp.

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -19,5 +19,5 @@ max_idle_time_seconds = 120
 watchdog_check_interval = 30
 # Victron DBus service name for the GPS data
 dbus_service = com.victronenergy.gps
-# DBus path containing the time since the last update
-dbus_path_last_update = /TimeSinceLastUpdate
+# CHANGED: Use the path containing the raw Unix timestamp
+dbus_path_last_update = /GpsTime
