change signal handler process

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -20,4 +20,4 @@ watchdog_check_interval = 30
 # Victron DBus service name for the GPS data
 dbus_service = com.victronenergy.gps
 # CHANGED: Use the path containing the raw Unix timestamp
-dbus_path_last_update = /GpsTime
+dbus_path_last_update = /NumberOfSatellites
