add dbus path for monitoring

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -19,5 +19,8 @@ max_idle_time_seconds = 120
 watchdog_check_interval = 30
 # Victron DBus service name for the GPS data
 dbus_service = com.victronenergy.gps
-# CHANGED: Use the path containing the raw Unix timestamp
-dbus_path_last_update = /NumberOfSatellites
+
+# NEW: The base object path for the TTY device created by socat
+dbus_object_path = /ve_ttyGPS0
+# UPDATED: The specific property name used for monitoring
+dbus_property_name = NrOfSatellites
