fix path for monitoring

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -18,9 +18,6 @@ max_idle_time_seconds = 120
 # How often (seconds) the watchdog checks the DBus timestamp and process status
 watchdog_check_interval = 30
 # Victron DBus service name for the GPS data
-dbus_service = com.victronenergy.gps
-
-# NEW: The base object path for the TTY device created by socat
-dbus_object_path = /ve_ttyGPS0
-# UPDATED: The specific property name used for monitoring
-dbus_property_name = NrOfSatellites
+dbus_service = com.victronenergy.gps.ve_ttyGPS0
+dbus_object_path = /NrOfSatellites
+dbus_property_name = Value
