--- a/config.sample.ini
+++ b/config.sample.ini
@@ -7,17 +7,16 @@ tty_device = /dev/ttyGPS0
 baud_rate = 115200
 
 [PATHS]
-# Path to the VICTRON SYSTEM BINARY (Correct for system use)
+# Path to the VICTRON SYSTEM BINARY
 gps_dbus_path = /opt/victronenergy/gps-dbus/gps_dbus
 # Full path to the socat executable
 socat_path = /usr/bin/socat
 
 [MONITORING]
-# Max time (seconds) allowed without a new GPS fix before restart
-max_idle_time_seconds = 120
-# How often (seconds) the watchdog checks the DBus timestamp and process status
+# Max time (seconds) allowed without a valid gps signal before restart
+max_idle_time_seconds = 450
+# How often (seconds) the watchdog checks the DBus for a gps signal
 watchdog_check_interval = 30
-# Victron DBus service name for the GPS data
 dbus_service = com.victronenergy.gps.ve_ttyGPS0
 dbus_object_path = /NrOfSatellites
 dbus_property_name = Value
