--- a/config.sample.ini
+++ b/config.sample.ini
@@ -3,6 +3,8 @@
 router_ip = 192.168.8.1
 router_port = 5555
 # Pseudo-TTY device created by socat
+# If more than one device is connecting to the socat provider this setting needs
+# to be unique for each connected device. ie. /dev/ttyGPS1, /dev/ttyGPS2, etc.
 tty_device = /dev/ttyGPS0
 baud_rate = 115200
 
@@ -17,6 +19,7 @@ socat_path = /usr/bin/socat
 max_idle_time_seconds = 450
 # How often (seconds) the watchdog checks the DBus for a gps signal
 watchdog_check_interval = 30
+# the ttyGPS<> portion of this setting needs to match the tty_device setting above.
 dbus_service = com.victronenergy.gps.ve_ttyGPS0
 dbus_object_path = /NrOfSatellites
 dbus_property_name = Value
